# run_simplefold

./: README.md  pyproject.toml  simplefold.py
src/: run_simplefold.py
