[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "run_simplefold"
version = "0.0.1"
authors = [
  { name = "Andrey Rozenberg", email = "alephreish@gmail.com" }
]
description = "SimpleFold wrapper"
readme = "README.md"
requires-python = ">=3.10, <3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
    "gemmi==0.7.3",
    "tqdm==4.67.2",
    "biopython==1.85",
    "simplefold @ git+https://github.com/apple/ml-simplefold"
]
[project.urls]
"Homepage" = "https://github.com/BejaLab/run_simplefold"
"Bug Tracker" = "https://github.com/BejaLab/run_simplefold/issues"

[project.scripts]
simplefold_init = "run_simplefold:init_cli"
simplefold_run = "run_simplefold:run_cli"
simplefold_select = "run_simplefold:select_cli"
